[metadata]
name = py-viz-algs
author = Evo Williamson
author-email = evowilliamson@gmail.com
summary = Visualizing algorithms in Python
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
requires-python = >=3.6
project_urls =
    Documentation = https://readthedocs.org/projects/py-viz-algs/
    Source Code = https://github.com/evowilliamson/py-viz-algs/
home-page = https://readthedocs.org/projects/py-viz-algs/
classifier =
        License :: OSI Approved :: GNU General Public License v2 (GPLv2)
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Topic :: Software Development
	    Programming Language :: Python
        Programming Language :: Python :: 3.6
        Operating System :: OS Independent
        

[files]
packages = 
    py-viz-algs

[py-viz-algs]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
   setup.py
   tests/
api_doc_dir = reference/api

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal = 1
